Use jOOQ to build the SQL and JdbcTemplate to execute it